--- a/views/admin/payments/edit.ejs
+++ b/views/admin/payments/edit.ejs
@@ -1,54 +1,71 @@
-<%- include ("../../partials/header.ejs") %> <%- include ("../../partials/navbar.ejs") %>
+<%- include ("../../partials/header.ejs") %> <%- include
+("../../partials/navbar.ejs") %>
 
-<div class="container">
-    <hr>
-    <div class="card"> 
-        <div class="card-header">
-            <h2>Editar Pagamento</h2>
-        </div>
-        <div class="card-body">
-            <form method="POST" action="/payments/update">
-                <input type="hidden" value="<%= payment.id %>" name="id">
-                <input class="form-control" type="text" name="fornecedor" placeholder="Defina o título do Pagamento" value="<%= payment.fornecedor %>"><br>
-                <textarea class="form-control" placeholder="Escreva o Pagamento aqui!" name="obs" id="payment"></textarea><br>
-                <label>Categoria</label>
-                <select name="category" class="form-control">
-                    <% categories.forEach((category) => { %>
-                        <% if(category.id == payment.categoryId) { %> 
-                            <option value="<%= category.id %>" selected><%= category.title %></option>
-                        <% } else { %>
-                            <option value="<%= category.id %>"><%= category.title %></option>
-                        <% } %>   
-                    <% }) %>
-                </select>
-                <br>
-                <button class="btn btn-success">Atualizar</button>
-            </form>
-        </div>
+  <div class="container">
+    <hr />
+    <div class="card">
+      <div class="card-header">
+        <h2>Atualizar Pagamento</h2>
+      </div>
+      <div class="card-body">
+        <form method="POST" action="/payments/update">
+          <label>Data da Competência</label>
+           <input type="hidden" value="<%= payment.id %>" name="id" />
+          <input
+            type="data"
+            name="data"
+            class="form-control"
+            value="<%= payment.data %>"
+            required
+          /><br />
+          <label>Fornecedor</label>
+          <input
+            class="form-control"
+            type="texto"
+            name="fornecedor"
+            placeholder="Fornecedor"
+            value="<%= payment.fornecedor %>"
+            required
+          /><br />
+          <div class="input--with-addon currency-input">
+            <label>Valor</label>
+            <span class="input-addon input-addon--align-left" shouldshow="R$"
+              ><span class="input-addon-text"> R$ </span
+              ><!----></span
+            >
+            <div class="input__container numeral-input">
+              <input
+                required="required"
+                type="text"
+                name="valor"
+                value="<%= payment.valor %>"
+                class="input form-control form-control-danger"
+              /><!---->
+            </div>
+            <!----><!---->
+          </div>
+          <br />
+          <label>Observações</label>
+          <textarea
+            class="form-control"
+            name="obs"
+            value="<%= payment.obs %>"
+            required
+          ></textarea>
+
+          <label>Categoria</label>
+          <select name="category" class="form-control">
+         <% categories.forEach((category) => { %>
+   <option value="<%= category.id %>" <%= category.id === payment.id ? "selected" : '' %>>
+    <%= category.title %></option>
+ <% }) %>
+        </select>
+          <br />
+          <button class="btn btn-success">Atualizar</button>
+        </form>
+      </div>
     </div>
-</div>
-
-<div id="content" style="display: none;">
-    <%- payment.obs %>
-</div>
-
+  </div> 
 
 
 <%- include ("../../partials/footer.ejs") %>
-
-<script src="/tinymce/tinymce.min.js"></script>
-<script>
-
-    tinymce.init({
-        language: 'pt_BR',
-        selector: "#payment",
-        activeEditor: true,
-        plugins: [
-            'advlist autolink link image lists print preview hr searchreplace wordcount fullscreen insertdatetime media save table paste emoticons'
-        ],
-        init_instance_callback: () => {
-            tinymce.get("payment").setContent($("#content").html())
-        }
-    })
-
-</script>
