--- a/views/admin/payments/page.ejs
+++ b/views/admin/payments/page.ejs
@@ -1,19 +1,65 @@
-<%- include ("../../partials/header.ejs") %> <%- include ("../../partials/navbar.ejs")
-%>
+<%- include ("../../partials/header.ejs") %> <%- include
+("../../partials/navbar.ejs") %>
+
 <body>
-  <div class="container">
-    <hr />
-    <% result.payments.rows.forEach(payment => { %>
+<div class="container">
+  <hr />
+  <h2>Pagamentos</h2>
+  <div class="card-group">
     <div class="card">
-      <div class="card-header">
-        <h2><%= payment.fornecedor %></h2>
-      </div>
-      <div class="card-body">
-        <a href="/<%= payment.slug %>" class="btn btn-success">Pagamento</a>
-      </div>
+  <a class="btn btn-success" href="/admin/payments/new">Novo Pagamento</a>
     </div>
-    <br />
-    <% }) %>
+   <div class="card">
+        <select name="category" class="form-control">
+          <% categories.forEach((category) => { %>
+          <option value="<%= category.id %>"><%= category.title %></option>
+          <% }) %>
+        </select>
+  </div>
+  <div class="card">
+    <!--Barra de Pesquisa-->
+		<div id="barrapesquisa">
+		    <input class="form-control" type="text" id="txtEBusca" placeholder="Pesquisar..."/>
+		    <i class="fa fa-search" aria-hidden="true"></i>
+		</div>
+  </div>
+  </div>
+  <hr />
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Fornecedor</th>
+        <th>Valor</th>
+        <th>Categoria</th>
+        <th>Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% payments.forEach(payment => { %>
+      <tr href="/<%= payment.slug %>">
+        <td><%= payment.fornecedor %></td>
+        <td><%= payment.valor %></td>
+        <td><%= payment.category.title %></td>
+        <td>
+             <a
+            href="/admin/payments/edit/<%= payment.id %>"
+            class="btn btn-warning"
+            >Editar</a
+          >
+          <form
+            method="POST"
+            action="/payments/delete"
+            style="display: inline;"
+            onsubmit="confirmarDelecao(event, this)"
+          >
+            <input type="hidden" name="id" value="<%= payment.id %>" />
+            <button class="btn btn-danger">Deletar</button>
+          </form>
+        </td>
+      </tr>
+      <% }) %>
+    </tbody>
+  </table>
 
     <div class="row">
       <div class="col col-12">
@@ -35,3 +81,13 @@
   </div>
 </body>
 <%- include ("../../partials/footer.ejs") %>
+
+<script>
+  function confirmarDelecao(event, form) {
+    event.preventDefault();
+    var decision = confirm("Você quer deletar este Pagamento?");
+    if (decision) {
+      form.submit();
+    }
+  }
+</script>
