--- a/views/admin/payments/index.ejs
+++ b/views/admin/payments/index.ejs
@@ -1,6 +1,11 @@
 <%- include ("../../partials/header.ejs") %> <%- include
 ("../../partials/navbar.ejs") %>
 
+<script
+  type="text/javascript"
+  src="http://code.jquery.com/jquery-1.8.2.min.js"
+></script>
+
 <body>
   <div class="container">
     <hr />
@@ -9,15 +14,9 @@
       <div class="card">
         <a class="btn btn-success" href="/admin/payments/new">Novo Pagamento</a>
       </div>
-
       <div class="card">
-       <select name="category" class="form-control">
-          <% categories.forEach((category) => { %>
-          <option value="<%= category.id %>"><%= category.title %></option>
-          <% }) %>
-        </select>
+        <select id="filtroColuna_3" class="filtroColuna form-control "></select>
       </div>
-
 
       <div class="card">
         <!--Barra de Pesquisa-->
@@ -35,7 +34,7 @@
     </div>
     <hr />
 
-    <table data-type="table-menu" class="table table-bordered">
+    <table id="tab" data-type="table-menu" class="table table-bordered">
       <thead>
         <tr>
           <th>Fornecedor</th>
@@ -46,7 +45,7 @@
       </thead>
       <tbody id="demo">
         <% payments.forEach(payment => { %>
-        <tr class="category" href="/<%= payment.slug %>">
+        <tr class="pesquisar" href="/<%= payment.slug %>">
           <td><%= payment.fornecedor %></td>
           <td><%= payment.valor %></td>
           <td><%= payment.category.title %></td>
@@ -82,6 +81,50 @@
 <%- include ("../../partials/footer.ejs") %>
 
 <script>
+  //Filter script
+
+  function AdicionarFiltro(tabela, coluna) {
+    var valores = new Array();
+
+    //varrer todas as linhas da tabela recuperando os valores da coluna a ser filtrada. Esses valores são inseridos uma única vez em um vetor valores. Usamos a função indexOf do array para verificar se o valor já foi inserido e, em caso negativo, usamos a função push para inseri-lo na lista.
+    $("#" + tabela + " tbody tr").each(function() {
+      var txt = $(this)
+        .children("td:nth-child(" + coluna + ")")
+        .text();
+      if (valores.indexOf(txt) < 0) {
+        valores.push(txt);
+      }
+    });
+
+    //usando a instrução for, percorremos o array valores e, para cada item, adicionamos uma tag option no select previamente declarado.
+    $("#filtroColuna_" + coluna.toString()).append("<option>TODOS</option>");
+    for (elemento in valores) {
+      $("#filtroColuna_" + coluna.toString()).append(
+        "<option>" + valores[elemento] + "</option>"
+      );
+    }
+    //um tratamento ao evento change do select cujo nome foi definido como filtroColuna_N, onde N é o índice da coluna. Primeiro obtemos o valor selecionado através da função val() da jQuery. Em seguida todas as linhas são tornadas visíveis com o método show().
+    $("#filtroColuna_" + coluna.toString()).change(function() {
+      var filtro = $(this).val();
+      $("#" + tabela + " tbody tr").show();
+      //Caso o item selecionado não seja “TODOS”, percorremos todas as linhas da tabela verificando o valor da coluna filtrada. Caso este não seja igual ao valor selecionado, a linha é ocultada com o método hide().
+      if (filtro != "TODOS") {
+        $("#" + tabela + " tbody tr").each(function() {
+          var txt = $(this)
+            .children("td:nth-child(" + coluna + ")")
+            .text();
+          if (txt != filtro) {
+            $(this).hide();
+          }
+        });
+      }
+    });
+  }
+  //Tendo definido a função AdicionarFiltro, podemos testá-la passando como parâmetro o nome da tabela, “tab”, e o índice da terceira coluna que, nesse caso inicia a contagem no 1.
+  AdicionarFiltro("tab", 3);
+</script>
+
+<script>
   //delete Script
   function confirmarDelecao(event, form) {
     event.preventDefault();
@@ -91,11 +134,6 @@
     }
   }
 
-  //Filter script
-  function myFunction() {
-    var result = document.getElementById("category").value;
-    document.getElementById("demo").innerHTML = result;
-  }
   ////////////////////////////
   // search script
 
@@ -103,7 +141,7 @@
   const tableMenu = document.querySelector("[data-type='table-menu']");
 
   const trs = Array.from(tableMenu.querySelectorAll("tbody tr"));
-  const trsCategory = Array.from(tableMenu.querySelectorAll("tr.category"));
+  const trsPesquisar = Array.from(tableMenu.querySelectorAll("tr.pesquisar"));
 
   inputSearch.addEventListener("input", function() {
     const str = this.value;
@@ -120,7 +158,7 @@
 
   function filterData(str) {
     showAllItems();
-    trsCategory.forEach((trCategory) => {
+    trsPesquisar.forEach((trPesquisar) => {
       let found = false;
 
       for (let i = 0; i < trs.length; i++) {
