--- a/views/admin/receipts/edit.ejs
+++ b/views/admin/receipts/edit.ejs
@@ -12,7 +12,7 @@
           <label>Data da Competência</label>
            <input type="hidden" value="<%= receipt.id %>" name="id" />
           <input
-            type="data"
+            type="date"
             name="data"
             class="form-control"
             value="<%= receipt.data %>"
