--- a/views/admin/receipts/new.ejs
+++ b/views/admin/receipts/new.ejs
@@ -3,7 +3,7 @@
   <hr />
   <div class="card">
     <div class="card-header">
-      <h2>Novo Pagamento</h2>
+      <h2>Novo Recebimento</h2>
     </div>
     <div class="card-body">
       <form method="POST" action="/receipts/save">
