--- a/views/admin/payments/index.ejs
+++ b/views/admin/payments/index.ejs
@@ -34,7 +34,7 @@
       <div class="col-4">
         <div class="card text-center">
           <div id="filterData">
-  <button type="button" class="btn dropdown-toggle form-control" data-bs-toggle="dropdown" aria-expanded="false">
+  <button type="button" class="btn dropdown form-control" data-bs-toggle="dropdown" aria-expanded="false">
     Filter
   </button>
   <ul class="dropdown-menu">
@@ -83,7 +83,6 @@
               id="search"
               placeholder="Pesquisar..."
             />
-            <i class="fa fa-search" aria-hidden="true"></i>
           </form>
         </div>
       </div>
