--- a/views/admin/receipts/index.ejs
+++ b/views/admin/receipts/index.ejs
@@ -13,7 +13,7 @@
       <div class="col-3">
         <div class="card">
           <a class="btn btn-success form-control" href="/admin/receipts/new"
-            >Novo Pagamento</a
+            >Novo Recebimento</a
           >
         </div>
       </div>
@@ -30,7 +30,7 @@
       <div class="col-4">
         <div class="card text-center">
           <div id="filterData">
-  <button type="button" class="btn dropdown-toggle form-control" data-bs-toggle="dropdown" aria-expanded="false">
+  <button type="button" class="btn dropdown form-control" data-bs-toggle="dropdown" aria-expanded="false">
     Filter
   </button>
   <ul class="dropdown-menu">
@@ -79,7 +79,6 @@
               id="search"
               placeholder="Pesquisar..."
             />
-            <i class="fa fa-search" aria-hidden="true"></i>
           </form>
         </div>
       </div>
